--- a/Jwt-Impl/src/main/resources/application-local.properties
+++ b/Jwt-Impl/src/main/resources/application-local.properties
@@ -7,3 +7,5 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+app.jwtExpirationMs=200000
+app.jwtSecret=skdtjgqwlad@34$%fdgc
